--- a/assignment1/twist.html
+++ b/assignment1/twist.html
@@ -7,11 +7,13 @@
 
 <script id="vertex-shader" type="x-shader/x-vertex">
 attribute vec4 vPosition;
+varying vec4 vColor;
 
 void
 main()
 {
     gl_Position = vPosition;
+    vColor = vec4(0.0, 0.0, 0.0, 1.0);
 }
 </script>
 
@@ -35,5 +37,8 @@ main()
 <canvas id="gl-canvas" width="512" height="512">
 Oops ... your browser doesn't support the HTML5 canvas element
 </canvas>
+
+
+
 </body>
 </html>
