--- a/assignment3/index.html
+++ b/assignment3/index.html
@@ -5,57 +5,39 @@
     <title>Twist & Tesselation</title>
 
 
-    <script id="vertex-shader" type="x-shader/x-vertex">
+<script id="vertex-shader" type="x-shader/x-vertex">
     attribute vec3 aVertexPosition;
     attribute vec3 aVertexNormal;
-    attribute vec2 aTextureCoord;
 
     uniform mat4 uMVMatrix;
     uniform mat4 uPMatrix;
     uniform mat3 uNMatrix;
 
-    uniform vec3 uAmbientColor;
-
-    uniform vec3 uLightingDirection;
-    uniform vec3 uDirectionalColor;
-
-    uniform bool uUseLighting;
-
-    varying vec2 vTextureCoord;
     varying vec3 vLightWeighting;
 
     void main(void) {
         gl_Position = uPMatrix * uMVMatrix * vec4(aVertexPosition, 1.0);
-        vTextureCoord = aTextureCoord;
 
-        if (!uUseLighting) {
-            vLightWeighting = vec3(1.0, 1.0, 1.0);
-        } else {
-            vec3 transformedNormal = uNMatrix * aVertexNormal;
-            float directionalLightWeighting = max(dot(transformedNormal, uLightingDirection), 0.0);
-            vLightWeighting = uAmbientColor + uDirectionalColor * directionalLightWeighting;
-        }
+        vLightWeighting = vec3(1.0, 1.0, 1.0);
+
     }
 </script>
 
-    <script id="fragment-shader" type="x-shader/x-fragment">
-    precision mediump float;
+<script id="fragment-shader" type="x-shader/x-fragment">
+precision mediump float;
 
-    varying vec2 vTextureCoord;
-    varying vec3 vLightWeighting;
+//uniform vec4 fColor;
 
-    uniform sampler2D uSampler;
-
-    void main(void) {
-        vec4 textureColor = texture2D(uSampler, vec2(vTextureCoord.s, vTextureCoord.t));
-        gl_FragColor = vec4(textureColor.rgb * vLightWeighting, textureColor.a);
-    }
+void main() {
+    gl_FragColor = vec4(0.0, 0.0, 0.0, 1.0);;
+}
 </script>
 
     <script type="text/javascript" src="../Common/webgl-utils.js"></script>
     <script type="text/javascript" src="../Common/initShaders.js"></script>
     <script type="text/javascript" src="../Common/MV.js"></script>
     <script type="text/javascript" src="cad3d.js"></script>
+    <script type="text/javascript" src="Sphere.js"></script>
 </head>
 
 <body>
