--- a/assignment3-new/index.html
+++ b/assignment3-new/index.html
@@ -6,15 +6,16 @@
 
 
 <script id="vertex-shader" type="x-shader/x-vertex">
-attribute vec4 vPosition;
-varying vec4 vColor;
 
+attribute vec4 vPosition;
+uniform mat4 modelViewMatrix;
+uniform mat4 projectionMatrix;
 void
 main()
 {
-    gl_Position = vPosition;
-    vColor = vec4(0.0, 0.0, 0.0, 1.0);
+    gl_Position = projectionMatrix*modelViewMatrix*vPosition;
 }
+
 </script>
 
 <script id="fragment-shader" type="x-shader/x-fragment">
@@ -30,15 +31,13 @@ main()
 <script type="text/javascript" src="../Common/webgl-utils.js"></script>
 <script type="text/javascript" src="../Common/initShaders.js"></script>
 <script type="text/javascript" src="../Common/MV.js"></script>
-<script type="text/javascript" src="cad3D.js"></script>
+<script type="text/javascript" src="Cylinder.js"></script>
 </head>   
 
 <body>
 <canvas id="gl-canvas" width="512" height="512">
 Oops ... your browser doesn't support the HTML5 canvas element
 </canvas>
-
-
 
 </body>
 </html>
