--- a/assignment3/index.html
+++ b/assignment3/index.html
@@ -31,7 +31,7 @@ main()
 <script type="text/javascript" src="../Common/webgl-utils.js"></script>
 <script type="text/javascript" src="../Common/initShaders.js"></script>
 <script type="text/javascript" src="../Common/MV.js"></script>
-<script type="text/javascript" src="Sphere.js"></script>
+<script type="text/javascript" src="Cylinder.js"></script>
 </head>   
 
 <body>
