--- a/assignment3/index.html
+++ b/assignment3/index.html
@@ -41,9 +41,10 @@ main()
 <canvas id="gl-canvas" width="512" height="512">
 Oops ... your browser doesn't support the HTML5 canvas element
 </canvas>
-<select id="shapeSelect">
-  <option value="Cone">Cone</option>
+<select onchange="onChange()" id="shapeSelect">
+  
   <option value="Cylinder">Cylinder</option>
+  <option value="Cone">Cone</option>
   <option value="Sphere">Sphere</option>
 </select>
 
