--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
    </head>
    <body>
     <h1>A few WebGL projects</h1>
-    <a href="./assignment1/twist.html">Project 1 - Twist</a>
-    <a href="./assignment2/mousedown.html">Project 2</a>
-    <a href="./assignment3/index.html">Project 3 - Shapes</a>
-    <a href="./assignment4/index.html">Project 4 - Sphere</a>
-    <a href="./assignment4-beta/index.html">Project 4 (test) - Multiple Shapes?</a>
+     <ul>
+      <li><a href="./assignment1/twist.html">Project 1 - Twist</a></li>
+      <li><a href="./assignment2/mousedown.html">Project 2</a></li>
+      <li><a href="./assignment3/index.html">Project 3 - Shapes</a></li>
+      <li><a href="./assignment4/index.html">Project 4 - Sphere</a></li>
+     </ul>
    </body>
 </html>
